Closed Bug 341277 Opened 18 years ago Closed 18 years ago

assertion loading any URL that's not in bookmarks

Categories

(Firefox :: Bookmarks & History, defect)

2.0 Branch
defect
Not set
major

Tracking

()

RESOLVED FIXED
Firefox 2 beta1

People

(Reporter: dbaron, Assigned: Gavin)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Running a debug build of Firefox on the MOZILLA_1_8_BRANCH asserts every time I load a URL that's not in my bookmarks, with the following stack:

###!!! ASSERTION: null ptr: 'aSource != nsnull', file /builds/1.8/mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp, line 3125
Break: at file /builds/1.8/mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp, line 3125
nsDebugImpl::Break(char const*, int) (/builds/1.8/mozilla/xpcom/base/nsDebugImpl.cpp:319)
nsDebugImpl::Assertion(char const*, char const*, char const*, int) (/builds/1.8/mozilla/xpcom/base/nsDebugImpl.cpp:268)
NSGlue_Assertion (/builds/1.8/obj/firefox-debugopt/xpcom/build/nsDebug.cpp:107)
nsBookmarksService::IsBookmarkedResource(nsIRDFResource*, int*) (/builds/1.8/mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp:3125)
nsBookmarksService::GetSynthesizedType(nsIRDFResource*, nsIRDFNode**) (/builds/1.8/mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp:3401)
nsBookmarksService::RequestCharset(nsIWebNavigation*, nsIChannel*, int*, nsISupports**, nsACString_internal&) (/builds/1.8/mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp:3479)
nsHTMLDocument::TryBookmarkCharset(nsIDocShell*, nsIChannel*, int&, nsACString_internal&) (/builds/1.8/mozilla/content/html/document/src/nsHTMLDocument.cpp:534)
nsHTMLDocument::StartDocumentLoad(char const*, nsIChannel*, nsILoadGroup*, nsISupports*, nsIStreamListener**, int, nsIContentSink*) (/builds/1.8/mozilla/content/html/document/src/nsHTMLDocument.cpp:819)
...

Either there's a problem or there's a bogus assertion; we should figure out which and fix it.
Flags: blocking-firefox2?
This is almost certainly due to bug 284660, I will look into it later today when I get back home.
Or a null check, and really it should return NS_ERROR_FAILURE and not NS_RDF_NO_VALUE in that case.
Attached patch patchSplinter Review
Assignee: nobody → gavin.sharp
Status: NEW → ASSIGNED
Attachment #225356 - Flags: review?(mconnor)
Attachment #225356 - Flags: approval-branch-1.8.1?(mconnor)
Whiteboard: [patch-r?]
Attachment #225356 - Flags: review?(mconnor)
Attachment #225356 - Flags: review+
Attachment #225356 - Flags: approval-branch-1.8.1?(mconnor)
Attachment #225356 - Flags: approval-branch-1.8.1+
Whiteboard: [patch-r?] → [checkin needed (1.8 branch)]
mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp 	1.67.2.12
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: blocking-firefox2?
Keywords: fixed1.8.1
OS: Linux → All
Hardware: PC → All
Resolution: --- → FIXED
Whiteboard: [checkin needed (1.8 branch)]
Target Milestone: --- → Firefox 2 beta1
Blocks: 284660
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: