Bug 341277: fix the cause of an assertion failure when loading any URL that's not in bookmarks, r+a181=mconnor